--- a/sistema_lime/index.html
+++ b/sistema_lime/index.html
@@ -27,7 +27,7 @@ Bem vindo(a), Professor(a)!
 </h2>
 
 <div id="content" align='center'>
-<form name="login" method="post" action="../sistema_lime/acessodb/confirmar_login.php">
+<form name="login" method="post" action="acessodb/confirmar_login.php">
                 <table width="400" border="0" cellspacing="0" cellpadding="0">
                           <tr>
                                 <td width="150"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Login:</font></td>
