--- a/sistema_lime/home/contato.html
+++ b/sistema_lime/home/contato.html
@@ -25,8 +25,8 @@
 <body>
 
 
-<!-- COMENTÃ~ARIO DESENVOLVEDOR -->
-<p>Text About</p>
+<!-- CONTATO -->
+<p>Text</p>
 <div id="footer">
         </br>
         </br>
