--- a/sistema_lime/acessodb/radar.html
+++ b/sistema_lime/acessodb/radar.html
@@ -1,17 +1,30 @@
 <html>
-<br>
-aquiiii
-i
-i
-i
-i
-i
-i
-i
-ii
-i
+  <head>
+  home
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+	<script src="RadarChart.js"></script>
+	<style>
+		body {
+		  overflow: hidden;
+		  margin: 0;
+		  font-size: 14px;
+		  font-family: "Helvetica Neue", Helvetica;
+		}
 
-<br>
-<script type="text/javascript" src="script.js"></script>
-
+		#chart {
+		  position: absolute;
+		  top: 50px;
+		  left: 100px;
+		}	
+	</style>
+  </head>
+  <body>
+    <div id="body">
+	  <div id="chart"></div>
+    </div>
+	
+    <script type="text/javascript" src="script.js"></script>
+end
+  </body>
 </html>
