--- a/sistema_lime/acessodb/radar.html
+++ b/sistema_lime/acessodb/radar.html
@@ -1,24 +1,12 @@
 <html>
   <head>
   home
+  <link href="../menu_assets/styles2.css" rel="stylesheet" type="text/css">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="RadarChart.js"></script>
-	<style>
-		body {
-		  overflow: hidden;
-		  margin: 0;
-		  font-size: 14px;
-		  font-family: "Helvetica Neue", Helvetica;
-		}
-
-		#chart {
-		  position: absolute;
-		  top: 50px;
-		  left: 100px;
-		}	
-	</style>
   </head>
+  
   <body>
     <div id="body">
 	  <div id="chart"></div>
