--- a/sistema_lime/acessodb/radar.html
+++ b/sistema_lime/acessodb/radar.html
@@ -12,5 +12,15 @@
     </div>
 	
     <script type="text/javascript" src="script.js"></script>
+	
+<?php
+
+for ($i = 0; $i < 14; $i++){
+	echo "Q" . ($i + 1);
+}
+
+
+?>
+	
   </body>
 </html>
