--- a/sistema_lime/acessodb/texto.html
+++ b/sistema_lime/acessodb/texto.html
@@ -1,11 +1,10 @@
 <html>
-TEXTO
-   <?php
+<h1>Aqui</h1>
         
-        for ($i = 0; $i < 15; $i++) {
-            <a href="#" class="btn btn-default">$i</a>            
-        }
-      
-    ?>
+
+
+
+
+
 
 </html>
