--- a/novoMenu/index.html
+++ b/novoMenu/index.html
@@ -53,7 +53,21 @@ Bem vindo(a), Professor(a)!
 </form>
 
 </div> 
+<!--
 
+<div align='center'>
+<p>
+<iframe
+name="iframe1"
+width="1200"
+height="720"
+src='home/login2.html'
+frameborder="yes"
+scrolling="yes">
+</iframe>
+<p>
+</div>
+-->
 
 <!-- COMENTARIO DESENVOLVEDOR -->
 
