--- a/sistema_lime/acessodb/radar.html
+++ b/sistema_lime/acessodb/radar.html
@@ -6,6 +6,8 @@
 	<script src="RadarChart.js"></script>
   </head>
   
+  <br><br><br><br><br><br><br><br>
+  titulo
   <body>
     <div id="body">
 	  <div id="chart"></div>
