--- a/sistema_lime/acessodb/radar.html
+++ b/sistema_lime/acessodb/radar.html
@@ -5,9 +5,7 @@
 	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="RadarChart.js"></script>
   </head>
-  
-  <br><br><br><br><br><br><br><br>
-  titulo
+  <center>titulo</center>
   <body>
     <div id="body">
 	  <div id="chart"></div>
