--- a/sistema_lime/acessodb/radar.html
+++ b/sistema_lime/acessodb/radar.html
@@ -5,7 +5,9 @@
 	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="RadarChart.js"></script>
   </head>
-  <center>titulo</center>
+  
+  <h3><center>Disciplina</center></h3>
+  
   <body>
     <div id="body">
 	  <div id="chart"></div>
@@ -15,8 +17,7 @@
 	
 	
 <br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br>
-
+1
 <?php
 
 echo "...";
@@ -26,6 +27,6 @@ for($i = 0; $i < 14; $i ++) {
 
 
 ?>
-	
+2
   </body>
 </html>
