Ajeitando tamanho do menu

--- a/sistema_lime/ranking/index.html
+++ b/sistema_lime/ranking/index.html
@@ -7,10 +7,24 @@
   <script type="text/javascript" src="d3.v3.js"></script>
   <script type="text/javascript" src="ranking.js"></script>
 </head>
-<body onload="loadData();">
+
+<!-- <body onload="loadData();">
 <div id="infos" class="plot-info2" style="text-align:left; font-size : 14px;">
 	<a href="javascript:plot_bar_disciplina_ranking('EDA', 'Q2');">Ranking...</a>
   </div>
+  
+ 
 </body>
+
+-->
+
+<body>
+	<div id="infos" class="plot-info2" style="text-align:left; font-size : 14px;">
+		
+</div>
+
+  <script type="text/javascript" src="ranking.js"></script>
+</body>
+
 </html> 
   
