--- a/sistema_lime/ranking/index.html
+++ b/sistema_lime/ranking/index.html
@@ -18,12 +18,13 @@
 
 -->
 
-<body>
+<body onload="loadData();">
 	<div id="infos" class="plot-info2" style="text-align:left; font-size : 14px;">
 		
-</div>
-
-  <script type="text/javascript" src="ranking.js"></script>
+	</div>
+		<script type="text/javascript" src="ranking.js"></script>
+	  
+	  
 </body>
 
 </html> 
