Ajeitando tamanho do menu

--- a/sistema_lime/ranking/index.html
+++ b/sistema_lime/ranking/index.html
@@ -22,7 +22,8 @@
 	<div id="infos" class="plot-info2" style="text-align:left; font-size : 14px;">
 		
 	</div>
-			<script type="text/javascript" src="ranking.js"></script>
+			
+			<a href="javascript:plot_bar_disciplina_ranking('EDA', 'Q2');">Ranking...</a>
 		
 	  
 	  
