--- a/sistema_lime/ranking/index.html
+++ b/sistema_lime/ranking/index.html
@@ -18,7 +18,7 @@
 
 -->
 
-<body onload="loadData();>
+<body onload="loadData();">
 	<div id="infos" class="plot-info2" style="text-align:left; font-size : 14px;">
 		
 	</div>
