--- a/sistema_lime/acessodb/radar.html
+++ b/sistema_lime/acessodb/radar.html
@@ -5,6 +5,30 @@
         <script src="http://d3js.org/d3.v3.min.js"></script>
         <script src="RadarChart.js"></script>
   </head>
+  
+<?php
+	
+	session_start();
+	
+	$disciplina_id = $_GET ['disciplina_id'];
+	
+	setcookie('disciplina_id',$disciplina_id);
+
+	
+	include "config.php";
+
+	$id = mysql_connect ( $host, $login_db, $senha_db );
+	$con = mysql_select_db ( $database, $id );
+	$login = $_SESSION['login'];
+
+	$sql = "SELECT p.nome, l.surveyls_title, d.disciplina_id  FROM sad_professor_disciplina as d, professores p, lime_surveys_languagesettings as l WHERE p.login = d.login and l.surveyls_survey_id         = d.disciplina_id and d.login = '$login'";
+	$res = mysql_query ( $sql, $id );
+	
+	echo "<br>";
+	echo $disciplina_id;
+	echo "<br>";
+
+?>
   <br>
   <h3><center>Disciplina</center></h3>
   
