--- a/sistema_lime/ranking/index.html
+++ b/sistema_lime/ranking/index.html
@@ -8,18 +8,11 @@
   <script type="text/javascript" src="ranking.js"></script>
 </head>
 
-<!-- <body onload="loadData();">
-<div id="infos" class="plot-info2" style="text-align:left; font-size : 14px;">
-	<a href="javascript:plot_bar_disciplina_ranking('EDA', 'Q2');">Ranking...</a>
-  </div>
-  
- 
-</body>
 
--->
-
-<body onload="loadData();">
+<body >
 	<div id="infos" class="plot-info2" style="text-align:left; font-size : 14px;">
+		
+		<script type="text/javascript" src="ranking.js"></script>
 		
 	</div>
 			
