--- a/sistema_lime/acessodb/teste.html
+++ b/sistema_lime/acessodb/teste.html
@@ -11,9 +11,8 @@ div.topic {
     display: none; 
     margin-bottom: 1em;
     padding: .25em;
-    border: black thin solid;
-    background-color: #EEEEFF;
-    width: 40em;
+    background-color: #FFFFFF;
+    width: 10em;
 }
 
 p.button {
