--- a/sistema_lime/acessodb/teste.html
+++ b/sistema_lime/acessodb/teste.html
@@ -11,8 +11,9 @@ div.topic {
     display: none; 
     margin-bottom: 1em;
     padding: .25em;
+    border: black;
     background-color: #FFFFFF;
-    width: 10em;
+    width: 30em;
 }
 
 p.button {
