--- a/sistema_lime/acessodb/teste.html
+++ b/sistema_lime/acessodb/teste.html
@@ -11,9 +11,9 @@ div.topic {
     display: none; 
     margin-bottom: 1em;
     padding: .25em;
-    border: black;
+    border-color: black;
     background-color: #FFFFFF;
-    width: 30em;
+    width: 35em;
 }
 
 p.button {
