--- a/sistema_lime/acessodb/teste.html
+++ b/sistema_lime/acessodb/teste.html
@@ -10,8 +10,7 @@
 div.topic {
     display: none; 
     margin-bottom: 1em;
-    <!-- padding: .25em; -->
-    border-color: black thin solid;
+    border: black thin solid;
     background-color: #FFFFFF;
     width: 35em;
 }
