--- a/sistema_lime/acessodb/teste.html
+++ b/sistema_lime/acessodb/teste.html
@@ -10,6 +10,7 @@
 div.topic {
     display: none; 
     margin-bottom: 1em;
+    padding: .25em;
     border: black thin solid;
     background-color: #FFFFFF;
     width: 35em;
@@ -155,42 +156,13 @@ hideShow.prototype.toggleRegion = function() {
 <h2 id="t1-label">Topic 1</h2>
 
 <p class="button">
-    <button id="button1" class="buttonControl" aria-controls="t1"><span>Show</span> Topic 1</button>
+    <button id="button1" class="buttonControl" aria-controls="t1"><span>Mostrar</span> Comentários</button>
 </p>
 
 <div id="t1" class="topic" role="region" aria-labelledby="t1-label" tabindex="-1" aria-expanded="false">
     Topic 1 is all about being Topic 1 and may or may not have anything to do with other topics.
 </div>
 
-<h2 id="t2-label">Topic 2</h2>
-
-<p class="button">
-    <button id="button2" class="buttonControl" aria-controls="t2"><span>Show</span> Topic 2</button>
-</p>
-
-<div id="t2" class="topic" role="region" aria-labelledby="m2-label" tabindex="-1" aria-expanded="false">
-       Topic 2 is all about being Topic 2 and may or may not have anything to do with other topics.
-</div>
-
-<h2 id="t3-label">Topic 3</h2>
-
-<p class="button">
-    <button id="button3" class="buttonControl" aria-controls="t3"><span>Show</span> Topic 3</button>
-</p>
-
-<div id="t3" class="topic" role="region" aria-labelledby="m3-label" tabindex="-1" aria-expanded="false">
-       Topic 3 is all about being Topic 3 and may or may not have anything to do with other topics.
-</div>
-
-<h2 id="t4-label">Topic 4</h2>
-
-<p class="button">
-    <button id="button4" class="buttonControl" aria-controls="t4"><span>Show</span> Topic 4</button>
-</p>
-
-<div id="t4" class="topic" role="region" aria-labelledby="m4-label" tabindex="-1" aria-expanded="false">
-       Topic 3 is all about being Topic 3 and may or may not have anything to do with other topics.
-</div>
 
     </div>
     
