--- a/sistema_lime/index.html
+++ b/sistema_lime/index.html
@@ -5,7 +5,7 @@
 
 <body>
 <div id='banner' align='center'>
-<img style='display: block; margin-left: auto; margin-right: auto ' bgcolor='black' src='imagens/ba.png'>
+<img style='display: block; margin-left: auto; margin-right: auto ' bgcolor='black' src='imagens/ba.jpg'>
 </div>
 
 </p>
