--- a/sistema_lime/index.html
+++ b/sistema_lime/index.html
@@ -1,3 +1,7 @@
+<html>
+
+<!-- Pagina inicial do Sistema de Avaliacao Docente -->
+
 <head>
 <link href="menu_assets/styles3.css" rel="stylesheet" type="text/css">
 
@@ -53,39 +57,12 @@ Bem vindo(a), Professor(a)!
 </form>
 
 </div> 
-<!--
-
-<div align='center'>
-<p>
-<iframe
-name="iframe1"
-width="1200"
-height="720"
-src='home/login2.html'
-frameborder="yes"
-scrolling="yes">
-</iframe>
-<p>
-</div>
--->
 
 <!-- COMENTARIO DESENVOLVEDOR -->
 
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
+</br></br></br></br></br>
+</br></br></br></br></br>
+</br></br></br></br></br>
 
 <div id="rodape">
 
@@ -93,13 +70,4 @@ scrolling="yes">
                 &copy; Copyright 2013 <a href="http://www.dsc.ufcg.edu.br/~pet"> PET Computa&ccedil;&atilde;o UFCG</a>. All rights reserved.</p>
 
 </div>
-
-</body>
 </html>
-
-</body>
-</html>
-
-
-
-
