--- a/sistema_lime/home/contato.html
+++ b/sistema_lime/home/contato.html
@@ -16,7 +16,7 @@
         <ul>
                 <li><a href="../index.html">Início</a></li>
                 <li><a href="about.html">Sobre</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="contato.html" class="here">Contato</a></li>
 
         </ul>
 
