--- a/sistema_lime/home/about.html
+++ b/sistema_lime/home/about.html
@@ -15,7 +15,7 @@
 <div id="cssmenu">
         <ul>
                 <li><a href="../index.html">Início</a></li>
-                <li><a href="about.html">Sobre</a></li>
+                <li><a href="about.html" class="here">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
 
         </ul>
@@ -23,19 +23,20 @@
 </div>
 
 <body>
+<p>
+Text about!
+</p>
 
+<!-- COMENTARIO DESENVOLVEDOR -->
 
-<!-- COMENTÃRIO DESENVOLVEDOR -->
-<p>Text About</p>
-<div id="footer">
-	</br>
-	</br>
-	</br>
-	</br>
-	</br>
-	</br>
-	<p style="text-align: left;">
-		&copy; Copyright 2013 <a href="http://www.dsc.ufcg.edu.br/~pet">Pet Computa&ccedil;&atilde;o UFCG</a>. All rights reserved.</p>
+</br></br></br></br></br>
+</br></br></br></br></br>
+</br></br></br></br></br>
+
+<div id="rodape">
+	<p style="text-align: center;">
+	&copy; Copyright 2013 <a href="http://www.dsc.ufcg.edu.br/~pet"> PET Computa&ccedil;&atilde;o UFCG</a>. All rights reserved.</p>
+
 </div>
 
 </body>
