--- a/sistema_lime/home/contato.html
+++ b/sistema_lime/home/contato.html
@@ -23,19 +23,21 @@
 </div>
 
 <body>
+<p>
+Contact
+</p>
 
+<!-- COMENTARIO DESENVOLVEDOR -->
 
-<!-- CONTATO -->
-<p>Text</p>
-<div id="footer">
-        </br>
-        </br>
-        </br>
-        </br>
-        </br>
-        </br>
-        <p style="text-align: left;">
-                &copy; Copyright 2013 <a href="http://www.dsc.ufcg.edu.br/~pet">Pet Computa&ccedil;&atilde;o UFCG</a>. All rights reserved.</p>
+</br></br></br></br></br>
+</br></br></br></br></br>
+</br></br></br></br></br>
+
+<div id="rodape">
+
+ <p style="text-align: center;">
+                &copy; Copyright 2013 <a href="http://www.dsc.ufcg.edu.br/~pet"> PET Computa&ccedil;&atilde;o UFCG</a>. All rights reserved.</p>
+
 </div>
 
 </body>
