--- a/sistema_lime/index.html
+++ b/sistema_lime/index.html
@@ -18,7 +18,7 @@
 
 <div id="cssmenu">
         <ul>
-                <li><a href="index.html">Início</a></li>
+                <li><a href="index.html" class="here">Início</a></li>
                 <li><a href="home/about.html">Sobre</a></li>
                 <li><a href="home/contato.html">Contato</a></li>
 
