--- a/sistema_lime/home/about.html
+++ b/sistema_lime/home/about.html
@@ -24,7 +24,7 @@
 
 <body>
 <p>
-Text about!
+About
 </p>
 
 <!-- COMENTARIO DESENVOLVEDOR -->
@@ -32,12 +32,15 @@ Text about!
 </br></br></br></br></br>
 </br></br></br></br></br>
 </br></br></br></br></br>
+</br></br></br></br></br>
 
 <div id="rodape">
-	<p style="text-align: center;">
-	&copy; Copyright 2013 <a href="http://www.dsc.ufcg.edu.br/~pet"> PET Computa&ccedil;&atilde;o UFCG</a>. All rights reserved.</p>
+
+ <p style="text-align: center;">
+                &copy; Copyright 2013 <a href="http://www.dsc.ufcg.edu.br/~pet"> PET Computa&ccedil;&atilde;o UFCG</a>. All rights reserved.</p>
 
 </div>
 
 </body>
 </html>
+
