--- a/sistema_lime/home/about.html
+++ b/sistema_lime/home/about.html
@@ -1,3 +1,4 @@
+<html>
 <head>
 <link href="../menu_assets/styles3.css" rel="stylesheet" type="text/css">
 
@@ -33,6 +34,7 @@ About
 </br></br></br></br></br>
 </br></br></br></br></br>
 </br></br></br></br></br>
+</br></br>
 
 <div id="rodape">
 
