--- a/sistema_lime/home/about.html
+++ b/sistema_lime/home/about.html
@@ -1,6 +1,11 @@
 <html>
+
+<!-- Pagina que explica rapidamente o Sistema de Avaliacao Docente -->
+
 <head>
+
 <link href="../menu_assets/styles3.css" rel="stylesheet" type="text/css">
+<title>Sistema de Avaliação Docente</title>
 
 </head>
 
